@@ -1,4 +1,9 @@
 2007-03-24  Paul Brook  <paul@codesourcery.com>
+
+	* arm-dis.c (coprocessor_opcodes): Remove superfluous 0x.
+	(print_insn_coprocessor): Handle %<bitfield>x.
+
+2007-03-24  Paul Brook  <paul@codesourcery.com>
 	Mark Shinwell  <shinwell@codesourcery.com>
 
 	* arm-dis.c (arm_opcodes): Print SRS base register.
